@@ -1184,8 +1184,6 @@ object interpreter::parse_link_template_expr()
 
 	int braces = 0;
 
-	auto context = m_scope.get_context_name();
-
 	// in case of a relative URL starting with a forward slash, we prefix the URL with the context_name of the server
 	if (m_lookahead == token_type::div)
 	{
@@ -1538,18 +1536,24 @@ class date_expr_util_object : public expression_utility_object<date_expr_util_ob
 		{
 			if (params.size() == 2 and params[0].is_string())
 			{
-				auto st = value_serializer<std::chrono::system_clock::time_point>::from_string(params[0].as<std::string>());
-				auto t = std::chrono::system_clock::to_time_t(st);
+				auto t = params[0].as<std::string>();
+				auto f = params[1].as<std::string>();
 
+				auto st = value_serializer<std::chrono::system_clock::time_point>::from_string(t);
+
+#if __has_include(<date/date.h>)
+				std::ostringstream os;
+				os << date::format(scope.get_request().get_locale(), f, st);
+#else
 				std::wostringstream os;
-
 				os.imbue(scope.get_request().get_locale());
 
 				std::wstring_convert<std::codecvt_utf8<wchar_t>> myconv;
-				std::wstring time = myconv.from_bytes(params[1].as<std::string>());
+				std::wstring time = myconv.from_bytes(f);
 
-				os << std::put_time(std::localtime(&t), time.c_str());
-
+				auto t = std::chrono::system_clock::to_time_t(st);
+				os << std::put_time(std::gmtime(&t), time.c_str());
+#endif
 				result = os.str();
 			}
 		}
@@ -1827,9 +1831,7 @@ const request &scope::get_request() const
 
 std::string scope::get_context_name() const
 {
-	if (not m_server)
-		throw zeep::exception("Invalid scope, no server");
-	return m_server->get_context_name();
+	return m_server ? m_server->get_context_name() : "";
 }
 
 json::element scope::get_credentials() const
